overflow issue solved

--- a/src/component/Global/Header/header.module.css
+++ b/src/component/Global/Header/header.module.css
@@ -2,6 +2,7 @@
   width: 100vw;
   background-color: #004169;
   height: 100px;
+  overflow: hidden;
 }
 .header {
   max-width: 1350px;
